# S-I_M_B_O_L

./: .dockerignore  .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .puppeteerrc.cjs  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  script.js  style.css
.github/: dependabot.yml
.github/workflows/: deploy.yml
.kilo/: kilo.json
.kilo/command/: build.md  serve.md  stats.md  validate.md
.kilo/research/: web-resources.md
book/: book.toml
book/src/: README.md  SUMMARY.md  dtc.md  elm327.md  faq.md  generations.md  glossary.md  hvac.md  instruments.md  maintenance.md  mistakes.md  momenty.md  noise-isolation.md  pinout.md  towing.md  vin.md
book/src/areodinamika/: elementy-kuova.md  forma-kuova.md  istoriya.md  kolesa.md  poddnishhe.md  vnutrennyaya.md  vzaimodejstvie.md
book/src/diagnostika/: index.md  rasprostranennye-problemy.md
book/src/dvigatel/: 3-1.md  3-10.md  3-11.md  3-12.md  3-2.md  3-3.md  3-4.md  3-5.md  3-6.md  3-7.md  3-8.md  3-9.md  index.md
book/src/elektrika/: 8-1.md  8-2.md  8-3.md  8-4.md  8-5.md  8-6.md  8-7.md  index.md
book/src/expluataciya/: 1-1.md  1-2.md  1-3.md  1-4.md  1-5.md  index.md
book/src/hodovaya/: 5-1.md  (+5 more)
book/theme/: admonitions.css  index.hbs  manifest.json  mermaid-init.js  pdf.css  sw.js
scripts/: 404.html  bundle-portable.py  bundle_portable.py  generate_illustrations.py  mermaid-mdbook-preprocessor.py  mermaid-pdf.py  mermaid-preprocess.py  mermaid_core.py  oem_catalog.json  pdf-a4.py  portable-readme.txt  pre-commit  serve.py  sitemap.py  test_portable.py
(+31 files in other folders)
