[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "reno-symbol-manual"
version = "2.0.0"
description = "Утилиты сборки Руководства по ремонту Renault Symbol"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "mi" },
]
keywords = ["renault", "symbol", "repair-manual", "mdbook"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Topic :: Documentation",
]

dependencies = [
  "pikepdf>=8,<10",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.9",
  "pytest>=8",
  "pytest-cov>=6",
  "coverage>=7",
  "flake8>=7",
  "bandit>=1.8",
]
test = [
  "pytest>=8",
  "pytest-cov>=6",
  "coverage>=7",
]
lint = [
  "ruff>=0.9",
  "flake8>=7",
  "bandit>=1.8",
]

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.html"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # line length enforced by formatter

[tool.ruff.format]
quote-style = "double"
indent-width = 4

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["scripts"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["scripts"]
omit = ["scripts/test_*.py"]

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.bandit]
exclude_dirs = ["scripts/test_*.py"]
skips = ["B101", "B301", "B303"]
